--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
+    "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
+    "react-markdown": "^8.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-time-ago": "^7.1.9",
+    "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
