--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
     "react-markdown": "^8.0.1",
+    "react-mount-animation": "^0.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.5.0",
